added new images adjusted fonts and css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:700" rel="stylesheet">
   <body>
 
     <div id="delicious-title">
@@ -21,27 +22,28 @@
           <img id="rss-tile" src="img/rss-icon.png">
           <img id="mail-tile" src="img/mail-icon.png">
         </div>
+        <div id="top-line"></div>
 
     </div>
       <h3>Chocolate Pizza</h3>
       <p id="posting-date">POSTED ON 15 DEC 2013/DESSERTS</p>
       <!-- pizza image -->
         <img id="pizza" src="img/choco-pizza.png">
-  <article class="body-text">
+   <article class="body-text">
      <p>For the fig swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
      <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely likewarm. Whisk is the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
      <p>Using tan ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
- </article>
+  </article>
 <!-- ingredient lists separated to display next to each other -->
-<ul id="list-l">
+ <ul id="list-l">
   <li>1 1/2 cups milk</li>
   <li>1/2 cup mascarpone</li>
   <li>1/2 tsp pink salt</li>
   <li>1 lb Black Mission Figs</li>
   <li>1/2 cup brown sugar</li>
   <li>2-4 tbsp water</li>
-</ul>
-<ul id="list-r">
+ </ul>
+ <ul id="list-r">
   <li>1 1/2 cups heavy cream</li>
   <li><del>1/3 granulated sugar</del></li>
   <li><del>2 egg yokes</del></li>
@@ -52,9 +54,11 @@
 <!-- line seperating box -->
 <!--add picture of author  -->
 <footer>
-  <p id="bottom-paragraph"><h6>Vanessa Stevenson</h6></p>
+  <div id="bottom-paragraph"><img id="vanessa-pic" src="img/van-pic.png"><h6>Vanessa Stevenson</h6></div>
 <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
-<p id = "fork-logo"><dv><h7>Delicious @copy2013 All Rights Reserved.</h7>
-<h6>Proudly published with Ghost</h6></footer>
+  <div id="bottom-line">
+    <img id="small-fork" src="img/small-logo.png">
+  </div>
+<p id="footer">Delicious @copy2013 All Rights Reserved.<br>Proudly published with Ghost</p></footer>
   </body>
 </html>
